    too old. 0.25.1 is needed to support Google Cloud Storage.
  * Added TRANSFER-RETRIEVE-URL extension to the external special remote
    protocol.
  * S3: Support restore=yes, when used with storageclass=DEEP_ARCHIVE and
    similar. This is equivilant to the now deprecated Amazon Glacier.
    (Needs aws-0.25.2)
  * stack.yaml: Use aws-0.25.2.
  * Added annex.trashbin configuration.

 -- Joey Hess <id@joeyh.name>  Tue, 18 Nov 2025 12:34:12 -0400

git-annex (10.20251114) upstream; urgency=medium

  * p2p --pair: Fix to work with external P2P networks.
  * p2phttp: Significant robustness fixes for bugs that caused the 
    server to stall.
  * p2phttp: Fix a file descriptor leak.
  * p2phttp: Added the --lockedfiles option.
  * dropunused: Run the annex.secure-erase-command 
    (or .git/hooks/secure-erase-annex) when deleting
    temp and bad object files.
  * remotedaemon: Avoid crashing when run with --debug.

 -- Joey Hess <id@joeyh.name>  Fri, 14 Nov 2025 12:46:45 -0400

git-annex (10.20251029) upstream; urgency=medium

  * Support ssh remotes with '#' and '?' in the path to the repository,
    the same way git does.
  * assistant: Fix reversion that caused files to be added locked by
    default.

 -- Joey Hess <id@joeyh.name>  Wed, 29 Oct 2025 10:04:43 -0400

git-annex (10.20250929) upstream; urgency=medium

  * enableremote: Allow type= to be provided when it does not change the
    type of the special remote.
  * importfeed: Fix encoding issues parsing feeds when built with OsPath.
  * Fix build with ghc 9.0.2.
  * Remove the Servant build flag; always build with support for
    annex+http urls and git-annex p2phttp.

 -- Joey Hess <id@joeyh.name>  Mon, 29 Sep 2025 11:28:09 -0400

git-annex (10.20250925) upstream; urgency=medium

  * Fix bug that made changes to a special remote sometimes be missed when
    importing a tree from it. After upgrading, any such missed changes
    will be included in the next tree imported from a special remote.