@@ -11,6 +11,8 @@ git-annex (10.20251118) UNRELEASED; urgency=medium
     (Needs aws-0.25.2)
   * stack.yaml: Use aws-0.25.2.
   * Added annex.trashbin configuration.
+  * Added --presentsince, --lackingsince, and --changedsince file
+    matching options.
 
  -- Joey Hess <id@joeyh.name>  Tue, 18 Nov 2025 12:34:12 -0400
 
